# pyrb

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  ci.yml  python-app.yml
notebooks/: ConstrainedRiskBudgeting.ipynb  ConstrainedRiskBudgeting.py  RiskBudgeting.ipynb  RiskBudgeting.py
pyrb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyrb/: __init__.py  allocation.py  settings.py  solvers.py  tools.py  validation.py
tests/: test_risk_budgeting.py
