[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrb"
version = "1.0.1"
description = "pyrb is a Python library to solve constrained risk budgeting problem."
readme = "README.md"
authors = [
    {name = "Jean-Charles Richard", email = "jcharles.richard@gmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pandas>=2.3.0",
    "numba>=0.61.0",
    "quadprog>=0.1.13",
    "scipy>=1.16.0",
    "numpy>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/jcrichard/pyrb"
Repository = "https://github.com/jcrichard/pyrb"
Issues = "https://github.com/jcrichard/pyrb/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrb*"]

[tool.setuptools.package-data]
pyrb = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
exclude = [
    "notebooks/**/*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["F401", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["pyrb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]
